Update PLAY ME! CLICK ON ME! I'M THE GAME!.html

--- a/PLAY ME! CLICK ON ME! I'M THE GAME!.html
+++ b/PLAY ME! CLICK ON ME! I'M THE GAME!.html
@@ -315,7 +315,7 @@ Sad face means you lost, happy face means you won.
 </p>
 <h1>The Challenge of Portals</h1><p></p>
 <canvas id="sequel" width="800" height="400"></canvas>
-<script src="https://1drv.ms/u/c/f2435216fb879338/EbhBIrSB4BNEouTf-CPPjtgBhLnFs-sKoWW1klnEpjtCgQ?e=5tdhyZ"></script>
+<script src="challengeOfPortals.js"></script>
 <button id="peiw">Shooting Portals</button>
 <script>
     const peiw = document.getElementById("peiw");
