Update PLAY ME! CLICK ON ME! I'M THE GAME!.html

--- a/PLAY ME! CLICK ON ME! I'M THE GAME!.html
+++ b/PLAY ME! CLICK ON ME! I'M THE GAME!.html
@@ -108,7 +108,7 @@ Colour: bright pink</p>
 <p>
     <button onclick="Play()" class="m">Play Game Music</button>
     <script>
-        var music = new Audio("Game Music.mp3")
+        var music = new Audio("Game%20Music.mp3")
           , volume = null;
         function Play() {
             music.play();
